--- a/index.html
+++ b/index.html
@@ -1,15 +1,59 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>001.OS</title>
-  <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+      background-color: #000;
+      color: #fff;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+    }
+
+    img {
+      max-width: 80%;
+      width: 260px;
+      height: auto;
+      margin-bottom: 30px;
+    }
+
+    h1 {
+      font-size: 2.4em;
+      margin: 0;
+    }
+
+    p {
+      font-size: 1em;
+      max-width: 90%;
+    }
+
+    @media (max-width: 600px) {
+      img {
+        width: 200px;
+      }
+
+      h1 {
+        font-size: 2em;
+      }
+
+      p {
+        font-size: 1em;
+      }
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <img src="logo.png" alt="001.OS Logo" class="logo" />
-  </div>
+  <img src="logo.png" alt="001.OS Logo">
+  <h1>001.OS</h1>
+  <p>One global logistical intelligence<br>resource management system</p>
 </body>
 </html>
